# ChangeLog for net-news/newspost
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/newspost/ChangeLog,v 1.15 2004/07/04 22:56:48 swegener Exp $

  05 Jul 2004; Sven Wegener <swegener@gentoo.org> -newspost-1.20.ebuild,
  -newspost-2.0.ebuild, -newspost-2.1.ebuild:
  Removed older ebuilds.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  newspost-2.1.1.ebuild:
  virtual/glibc -> virtual/libc

  21 Jun 2004; Sven Wegener <swegener@gentoo.org> newspost-1.20.ebuild,
  newspost-2.0.ebuild:
  Added IUSE="" and removed S=${WORKDIR}/${P}

  19 Jun 2004; Sven Wegener <swegener@gentoo.org> newspost-2.1.1.ebuild,
  newspost-2.1.ebuild:
  Added IUSE="" and removed S=${WORKDIR}/${P}

  19 Jun 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml:
  Added metadata.xml

  30 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> newspost-2.0.ebuild,
  newspost-2.1.1.ebuild:
  Adding amd64 keyword, closing #45934.

  08 Sep 2003; Michael Sterrett <msterret@gentoo.org> newspost-2.1.1.ebuild:
  use sed -i; error message for emake; only call dodoc once

*newspost-2.1.1 (20 Jul 2003)

  20 Jul 2003; Caleb Tennis <caleb@gentoo.org> newspost-2.1.1.ebuild:
  Bugfix version bump, keeping x86 stable.

*newspost-2.1 (02 Apr 2003)

  06 Apr 2003; Dan Armak <danarmak@gentoo.org> newspost-2.1.ebuild:
  Mark as x86 stable.

  02 Apr 2003; Dan Armak <danarmak@gentoo.org> newspost-2.1.ebuild:
  New upstream version. Closes bug #16037 - thanks to BiOCHiP for submitting.

*newspost-2.0 (29 Jul 2002)

  02 Aug 2003; Lisa Seelye <lisa@gentoo.org> :
  new-news/gnewspost-0.6 has a depend on =net-news/newspost-2.0, so keep this ebuild
  around please.

  29 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  New version with many important changes.

*newspost-1.20 (29 Jul 2002)

  29 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  User submission by Richard Jackson (#4936). newspost is a CL usenet binary
  autoposter.