@@ -1,4 +1,6 @@
-MD5 f541aa19d67d4d0fc852ba623a224677 ChangeLog 1993
-MD5 417d659a273bc23acd7c24e9457700d5 newspost-2.1.1.ebuild 933
+MD5 5bff52239ac4ca07c09796cda53f9f70 ChangeLog 2163
 MD5 d4764f5c17f5e0b416f7ddf271c77d71 metadata.xml 161
+MD5 417d659a273bc23acd7c24e9457700d5 newspost-2.1.1.ebuild 933
+MD5 5860f1e195b86abacfb8d39cb3038b1c newspost-2.0.ebuild 903
 MD5 b215709cb527d3080506432abfb71147 files/digest-newspost-2.1.1 65
+MD5 46899efb4a2b656aa05aa4d86f5792ba files/digest-newspost-2.0 63
