@@ -1,6 +1,11 @@
 # ChangeLog for net-news/newspost
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/newspost/ChangeLog,v 1.15 2004/07/04 22:56:48 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/newspost/ChangeLog,v 1.16 2004/07/05 18:04:45 swegener Exp $
+
+*newspost-2.0 (05 Jul 2004)
+
+  05 Jul 2004; Sven Wegener <swegener@gentoo.org> +newspost-2.0.ebuild:
+  Re-adding version 2.0 as it's required by net-news/gnewspost-0.6.
 
   05 Jul 2004; Sven Wegener <swegener@gentoo.org> -newspost-1.20.ebuild,
   -newspost-2.0.ebuild, -newspost-2.1.ebuild:
